--- a/src/components/homepage/HeroSection.astro
+++ b/src/components/homepage/HeroSection.astro
@@ -41,14 +41,14 @@
     </p>
     <div class="flex gap-6">
       <a
-        href="/about"
+        href="/freelance"
         class="rounded bg-blue-500 px-8 py-3 text-lg font-semibold text-white transition hover:bg-blue-600"
-        >Learn more</a
+        >Work with me</a
       >
       <a
-        href="/portfolio"
+        href="/about"
         class="rounded border border-white/10 bg-[#161c26] px-8 py-3 text-lg font-semibold text-white transition hover:bg-[#232b3a]"
-        >View my work</a
+        >Learn more</a
       >
     </div>
   </div>
