--- a/src/pages/freelance/index.astro
+++ b/src/pages/freelance/index.astro
@@ -57,6 +57,21 @@ import Layout from "src/layouts/Layout.astro";
           headline="Cloud Architecture"
           description="I design and build cloud infrastructure in AWS that's scalable, secure, and cost-effective — always with infrastructure as code. Using AWS CDK? I'm an admired contributor and know it inside and out."
         />
+        <ServiceCard
+          emoji="🔍"
+          headline="DevOps"
+          description="I'm a DevOps engineer through and through. I build CI/CD pipelines, automated deployments, and monitoring and alerting to keep services running smoothly."
+        />
+        <ServiceCard
+          emoji="👨‍💻"
+          headline="Application Development"
+          description="I'm a full-stack developer with tons of experience in building applications. Need a hand building a new product, or refactoring a legacy codebase? Leverage my expertise to get the job done."
+        />
+        <ServiceCard
+          emoji="🎙️"
+          headline="Talks"
+          description='In addition to writing code, I have several customizable presentations perfect for lunch-and-learns or workshop settings. Topics include Maximizing Developer Productivity, Effective <span class="font-mono">git</span> Usage, and more.'
+        />
       </div>
     </section>
   </main>
