feat: add floating contact button

--- a/src/pages/freelance/index.astro
+++ b/src/pages/freelance/index.astro
@@ -1,6 +1,8 @@
 ---
 import ServiceCard from "src/components/freelance/ServiceCard.astro";
 import Layout from "src/layouts/Layout.astro";
+import ContactSection from "src/components/homepage/ContactSection.astro";
+import FloatingContactButton from "src/components/FloatingContactButton.astro";
 ---
 
 <Layout
@@ -75,4 +77,6 @@ import Layout from "src/layouts/Layout.astro";
       </div>
     </section>
   </main>
+  <ContactSection />
+  <FloatingContactButton />
 </Layout>
