--- a/src/components/homepage/HeroSection.astro
+++ b/src/components/homepage/HeroSection.astro
@@ -43,12 +43,12 @@
       <a
         href="/freelance"
         class="rounded bg-blue-500 px-8 py-3 text-lg font-semibold text-white transition hover:bg-blue-600"
-        >Work with me</a
+        >Work with Me</a
       >
       <a
         href="/about"
         class="rounded border border-white/10 bg-[#161c26] px-8 py-3 text-lg font-semibold text-white transition hover:bg-[#232b3a]"
-        >Learn more</a
+        >Learn More</a
       >
     </div>
   </div>
