--- a/src/pages/freelance/index.astro
+++ b/src/pages/freelance/index.astro
@@ -32,9 +32,8 @@ import Layout from "src/layouts/Layout.astro";
           during an incident.
         </p>
         <p>
-          Identifying and resolving these challenges are my bread-and-butter. By investing in Developer Enablement,
-          you'll get more from your engineering investment, improve retention, and deliver software to your users more
-          quickly.
+          Identifying and resolving these challenges is what I do best. By investing in Developer Enablement, you'll get
+          more from your engineering investment, improve retention, and deliver software to your users more quickly.
         </p>
       </div>
     </section>
@@ -65,7 +64,7 @@ import Layout from "src/layouts/Layout.astro";
         <ServiceCard
           emoji="👨‍💻"
           headline="Application Development"
-          description="I'm a full-stack developer with tons of experience in building applications. Need a hand building a new product, or wrangling a legacy codebase? Leverage my expertise to get the job done."
+          description="I'm a full-stack developer with deep experience in building applications. Need a hand building a new product, or wrangling a legacy codebase? Leverage my expertise to get the job done."
         />
         <ServiceCard
           emoji="🎙️"
