--- a/src/components/homepage/HeroSection.astro
+++ b/src/components/homepage/HeroSection.astro
@@ -42,7 +42,7 @@
     <div class="flex gap-6">
       <a
         href="/freelance"
-        class="rounded bg-blue-500 px-8 py-3 text-lg font-semibold text-white transition hover:bg-blue-600"
+        class="rounded border border-blue-700 bg-blue-600 px-8 py-3 text-lg font-semibold text-white shadow transition hover:bg-blue-700"
         >Work with Me</a
       >
       <a
