--- a/src/components/homepage/HeroSection.astro
+++ b/src/components/homepage/HeroSection.astro
@@ -42,7 +42,7 @@
     <div class="flex gap-6">
       <a
         href="/freelance"
-        class="rounded border border-blue-700 bg-blue-600 px-8 py-3 text-lg font-semibold text-white shadow transition hover:bg-blue-700"
+        class="focus:ring-offset-bg-primary rounded bg-blue-500 px-8 py-4 text-lg font-bold text-white shadow-xl transition-all duration-300 hover:scale-105 hover:bg-blue-600 focus:ring-4 focus:ring-blue-400 focus:ring-offset-2 focus:outline-none"
         >Work with Me</a
       >
       <a
