--- a/src/pages/freelance/contact.astro
+++ b/src/pages/freelance/contact.astro
@@ -51,7 +51,7 @@ import Layout from "src/layouts/Layout.astro";
         <button
           type="submit"
           id="submit-btn"
-          class="w-full rounded-md bg-blue-600 px-4 py-2 font-semibold text-white transition-colors hover:bg-blue-500 disabled:cursor-not-allowed disabled:opacity-50"
+          class="focus:ring-offset-bg-primary w-full rounded bg-blue-500 px-8 py-4 text-lg font-bold text-white shadow-xl transition-all duration-300 hover:scale-105 hover:cursor-pointer hover:bg-blue-600 focus:ring-4 focus:ring-blue-400 focus:ring-offset-2 focus:outline-none disabled:cursor-not-allowed disabled:bg-blue-400 disabled:opacity-50 disabled:hover:scale-100"
           disabled
           aria-disabled="true">Submit</button
         >
