--- a/src/pages/freelance/contact.astro
+++ b/src/pages/freelance/contact.astro
@@ -48,13 +48,7 @@ import Layout from "src/layouts/Layout.astro";
           </small>
           <small id="message-error" class="mt-1 block hidden text-red-400">Please enter a message.</small>
         </div>
-        <button
-          type="submit"
-          id="submit-btn"
-          class="focus:ring-offset-bg-primary w-full rounded bg-blue-500 px-8 py-4 text-lg font-bold text-white shadow-xl transition-all duration-300 hover:scale-105 hover:cursor-pointer hover:bg-blue-600 focus:ring-4 focus:ring-blue-400 focus:ring-offset-2 focus:outline-none disabled:cursor-not-allowed disabled:bg-blue-400 disabled:opacity-50 disabled:hover:scale-100"
-          disabled
-          aria-disabled="true">Submit</button
-        >
+        <button type="submit" id="submit-btn" class="btn-primary w-full" disabled aria-disabled="true">Submit</button>
       </form>
       <div class="mt-5 space-y-2">
         <div
