--- a/src/pages/freelance/index.astro
+++ b/src/pages/freelance/index.astro
@@ -26,7 +26,7 @@ import Layout from "src/layouts/Layout.astro";
           deliver code. Therefore, my primary area of focus is <strong>Developer Enablement</strong>.
         </p>
         <p class="mb-4">
-          Many teams suffer from “paper cuts” that slow delivery, such as slow or flaky test suites, brittle
+          Many teams suffer from "paper cuts" that slow delivery, such as slow or flaky test suites, brittle
           deployments, or missing observability. Left unaddressed, these issues add up and make delivering value harder
           than it should.
         </p>
@@ -80,12 +80,7 @@ import Layout from "src/layouts/Layout.astro";
     <section class="mb-16 flex flex-col items-center py-12" id="contact">
       <h2 class="mb-8 text-3xl font-bold text-blue-300">Get in Touch</h2>
       <p class="prose mb-8 max-w-none text-center">Interested in working together? Let's connect.</p>
-      <a
-        href="/freelance/contact"
-        class="focus:ring-offset-bg-primary rounded bg-blue-500 px-8 py-4 text-lg font-bold text-white shadow-xl transition-all duration-300 hover:scale-105 hover:bg-blue-600 focus:ring-4 focus:ring-blue-400 focus:ring-offset-2 focus:outline-none"
-      >
-        Contact me
-      </a>
+      <a href="/freelance/contact" class="btn-primary"> Contact me </a>
     </section>
   </main>
 </Layout>
