--- a/src/pages/freelance/index.astro
+++ b/src/pages/freelance/index.astro
@@ -78,7 +78,7 @@ import Layout from "src/layouts/Layout.astro";
       </div>
     </section>
     <section class="mb-16 flex flex-col items-center py-12" id="contact">
-      <h2 class="mb-8 text-3xl font-bold text-blue-300">Get in Touch</h2>
+      <h2 class="mb-8 text-4xl font-bold text-white">Get in Touch</h2>
       <p class="prose mb-8 max-w-none text-center">Interested in working together? Let's connect.</p>
       <a href="/freelance/contact" class="btn-primary"> Contact me </a>
     </section>
